fixed navigation height and fixed overlapping behavior

--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -9,6 +9,17 @@
     height: 71px;
 }
 
+.navbar .navbar-header .navbar-brand {
+    padding-left: 12px;
+    padding-right: 12px;
+    margin-left: -12px;
+}
+
+.navbar-nav > li > a {
+    padding-left: 12px;
+    padding-right: 12px;
+}
+
 .navbar .top {
     float: left;
 }
@@ -19,11 +30,11 @@
 }
 
 .navbar .form-group {
-    margin: 0 10px 0 0;
+    margin: 0 7px 0 0;
 }
 
 .navbar .form-group input {
-    width: 150px;
+    width: 140px;
 }
 
 .navbar .form-group input[name="port"] {
